# packages/core/api/openapi.yaml
@@ -77,6 +77,42 @@ paths:
                   $ref: "#/components/schemas/Candidate"
         "404":
           description: Series not found.
+  /series/{seriesId}/votes:
+    get:
+      summary: Get votes for a series
+      description: Returns a list of all votes cast in a specific series.
+      operationId: getVotesBySeries
+      parameters:
+        - name: seriesId
+          in: path
+          required: true
+          schema:
+            type: integer
+        - name: limit
+          in: query
+          description: The maximum number of votes to return.
+          schema:
+            type: integer
+            minimum: 1
+            default: 20
+        - name: offset
+          in: query
+          description: The number of votes to skip before starting to collect the result set.
+          schema:
+            type: integer
+            minimum: 0
+            default: 0
+      responses:
+        "200":
+          description: A successful response with an array of votes.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: "#/components/schemas/Vote"
+        "404":
+          description: Series not found.
   /candidates/{candidateId}:
     get:
       summary: Get a specific candidate
